assign1/tests/type-checking/bad/type-as-func-name.c
#include "FenneC.h"

void int() {}
void unsigned() {}
void void() {}

int main() {
    return 0;
}